<resources>
    <string name="app_name">HomeAudioSystemAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="addSongList"> Type a song </string>
    <string name="addSongButton">Add Song</string>
    <string name="addSongDuration">HH:mm:ss</string>
    <string name="addArtist">Type an Artist</string>
    <string name="addArtistButton">Add Artist</string>
    <string name="addAlbum">Type name of album</string>
    <string name="addAlbumButton">Add Album</string>
    <string name="addPlaylist">Add Playlist</string>
    <string name="addPlaylistButton">Add Playlist</string>
    <string name="addNewLocation">type the location\'s name</string>
    <string name="addNewLocationGroup">type new group location name</string>


</resources>
